Fixing scroll bar appearance on Firefox

--- a/web_external/stylesheets/layout.styl
+++ b/web_external/stylesheets/layout.styl
@@ -188,5 +188,4 @@ img.im-blur:hover
 
 .im-caption
     height 70px
-    overflow scroll
     margin-top 10px
